--- a/jalase2/composer.json
+++ b/jalase2/composer.json
@@ -38,17 +38,18 @@
         }
     },
     "require": {
-        "php": "7.0",
+        "php": "^7.3 || ~8.0.0",
         "composer/package-versions-deprecated": "^1.10.99",
+        "guzzlehttp/guzzle": "^7.0",
         "laminas/laminas-component-installer": "^2.5.0",
         "laminas/laminas-config-aggregator": "^1.5.0",
         "laminas/laminas-diactoros": "^2.6.0",
+        "laminas/laminas-servicemanager": "^3.4",
         "laminas/laminas-stdlib": "^3.3.1",
         "laminas/laminas-zendframework-bridge": "^1.2.0",
         "mezzio/mezzio": "^3.5.0",
-        "mezzio/mezzio-helpers": "^5.6.0",
-        "laminas/laminas-servicemanager": "^3.4",
         "mezzio/mezzio-fastroute": "^3.0.3",
+        "mezzio/mezzio-helpers": "^5.6.0",
         "mezzio/mezzio-twigrenderer": "^2.6"
     },
     "require-dev": {
